# python-ogs

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  api-example.py  example.py  get_release_msg.py  mkdocs.yml  ogs_client.py  pyproject.toml  requirements.txt  setup.py  ws.py
.github/workflows/: main.yml
docs/: api.md  checklist.md  index.md  usage.md
example-data/: example-challenge.json  example-game-data.json  example-user-settings.json  example-user-vitals.json  example-user.json
src/ogsapi/: __init__.py  api.py  client.py  ogs_api_exception.py  ogschallenge.py  ogscredentials.py  ogsgame.py  ogsgameclock.py  ogsgamedata.py  ogsplayer.py  ogsrestapi.py  ogssocket.py
src/tests/: test.py
